--- a/assignment/style.css
+++ b/assignment/style.css
@@ -1,8 +1,38 @@
 /* Add a background color to the header element */
-
+main { 
+    background-color: rgb(237, 231, 231)
+}
 /* Add a fun background color to the main element */
+h1 {
+    text-align: center;
+}
+header {
+    background-color: rgb(61, 59, 59);
+}
+p {
+    color: rgb(216, 210, 210);
+    font-style: italic;
+}
+
+li {
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(107, 102, 102) 
+}
+
+footer {
+    background-color:  rgba(158, 155, 155, 0.204);
+}
+
+img {
+    border: 5px;
+    border-style: solid;
+    border-color: rgb(61, 59, 59);
+    height: 200px;
+}
+
 
 /* Align the h1 containing your name in the center of the header*/
+
 
 /* Make your p tag a different color and italic */
 
