--- a/assignment/style.css
+++ b/assignment/style.css
@@ -6,6 +6,10 @@ main {
 h1 {
     text-align: center;
 }
+
+h3 {
+    color: rgb(61, 59, 59);
+}
 header {
     background-color: rgb(61, 59, 59);
 }
